--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "dayjs": "^1.11.19",
+    "pinia": "^3.0.4",
     "sass": "^1.97.3",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.24",
